# observable-properties-python

./: pyproject.toml
src/: observable_properties.py
tests/: tests.py
