[tool.poetry]
name = "observable-properties"
version = "5.0.0.dev0"
description = "Observable managed attributes (aka, observable properties)"
authors = ["Ángel Fernández Pineda"]
readme = "README.md"
license = "LICENSE"
packages = [
    { include = "observable_properties.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
